<resources>
    <string name="app_name">BugReportingApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="bug_list_fragment_label">Bug List</string>
    <string name="bug_edit_fragment_label">Bug Edit</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="reportedDate">Reported Date:</string>
    <string name="solved">Solved:</string>
    <string name="severity">Severity:</string>
    <string name="bugs">Bugs</string>
    <string name="delete">Delete</string>
    <string name="savebutton">saveButton</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_text">Logout</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must not be empty</string>
</resources>