<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_bug_list">


    <fragment
        android:id="@+id/fragment_login"
        android:name="com.silviucanton.myandroidapp.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/fragment_bug_list"
        android:name="com.silviucanton.myandroidapp.bugs.list.BugListFragment"
        android:label="@string/bug_list_fragment_label"
        tools:layout="@layout/fragment_bug_list">

        <action
            android:id="@+id/action_BugListFragment_to_BugEditFragment"
            app:destination="@id/fragment_bug_edit" />

        <action
            android:id="@+id/action_fragment_item_list_to_fragment_login"
            app:destination="@id/fragment_login" />
    </fragment>
    <fragment
        android:id="@+id/fragment_bug_edit"
        android:name="com.silviucanton.myandroidapp.bugs.edit.BugEditFragment"
        android:label="@string/bug_edit_fragment_label"
        tools:layout="@layout/fragment_bug_edit">

        <action
            android:id="@+id/action_GuitarEditFragment_to_GuitarListFragment"
            app:destination="@id/fragment_bug_list" />
    </fragment>
</navigation>